--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
     <title>Actu Trailers</title>
   </head>
   <body>
+    <header></header>
     <div class="container">
-      <h1>Hello !</h1>
+      <h1>Accueil</h1>
       <a href="./movie_detail.html">Movie</a>
     </div>
   </body>
