--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,14 @@
   </head>
   <body>
     <header></header>
-    <div class="container">
-      <h1>Accueil</h1>
-      <a href="./movie_detail.html">Movie</a>
+    <main>
+      <div class="container">
+        <div class="container">
+          <h1>Accueil</h1>
+          <a href="./movie_detail.html">Movie</a>
+      </div>
+    </main>
     </div>
+    <footer></footer>
   </body>
 </html>
